--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,11 @@
 asgiref==3.8.1
 Django==5.0.6
+django-import-export==4.4.0
 gunicorn==22.0.0
+openpyxl==3.1.5
 packaging==24.1
+pillow==12.1.0
+PyMySQL==1.1.2
 python-dotenv==1.0.1
 sqlparse==0.5.0
 typing_extensions==4.12.2
