--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
 asgiref==3.8.1
+bleach==6.3.0
+diff-match-patch==20241021
 Django==5.0.6
 django-import-export==4.4.0
+django-summernote==0.8.20.0
+et_xmlfile==2.0.0
 gunicorn==22.0.0
 openpyxl==3.1.5
 packaging==24.1
@@ -8,5 +12,7 @@ pillow==12.1.0
 PyMySQL==1.1.2
 python-dotenv==1.0.1
 sqlparse==0.5.0
+tablib==3.9.0
 typing_extensions==4.12.2
+webencodings==0.5.1
 whitenoise==6.7.0
